# mn-translit

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  python-package.yml  release.yml
mn_translit/: __init__.py  __main__.py  translit.py
test/: test_translit.py
tests/: test_translit.py
